maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  val sortie = trouveSortie()
}

def trouveSortie() : Array[Int] = {
  for (x <- 0 to getMondeLargeur()-1){
  	for (y <- 0 to getMondeHauteur()-1){
      if (aBiscuit(x,y)) {
        return (x,y)
      }
    }
  }
}